--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -117,6 +117,10 @@ where $K$ is the total bins, $B$ is the bins-per-octave, and $\xi_{\text{min,max
 	\label{fig:octvlog}
 \end{figure}
 
+\newpagefill
+
+\section{xumx-sliCQ experiments}
+\label{appendix:crazyexperiments}
 
 \end{appendices}
 
